<resources>
    <string name="app_name">F1_simulation</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_driver">new_driver</string>
    <string name="back">Back</string>
    <string name="textview">TextView</string>
    <string name="surname">Surname</string>
    <string name="kenobi_ltt">Kenobi LTT</string>
    <string name="first_name">First Name:</string>
    <string name="Surname">Surname:</string>
    <string name="team">Team:</string>
    <string name="next_step">Next Step</string>
    <string name="number">Number:</string>
    <string name="quali_speed">quali speed</string>
    <string name="overtaking">Overtaking</string>
    <string name="next_driver">next_driver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qualifying">Qualifying</string>
    <string name="number_1_10">Number 1-10</string>
    <string name="race_pace">Race pace</string>
    <string name="racecraft">Racecraft</string>
    <string name="reset">Reset</string>
</resources>